--- a/HUffman/.vscode/settings.json
+++ b/HUffman/.vscode/settings.json
@@ -9,6 +9,8 @@
         "unordered_set": "cpp",
         "vector": "cpp",
         "iostream": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "ostream": "cpp",
+        "ranges": "cpp"
     }
 }
